--- a/flaskex.service
+++ b/flaskex.service
@@ -4,7 +4,7 @@ After=multi-user.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python /tmp/app.py
+ExecStart=/usr/bin/python /flaskex/app.py
 StandardInout=tty-force
 
 [Install]
